# Mudra-Analysis-backend-model

./: .gitignore  README.md  TRAIN_GUIDE.md  api.py  class_indices.json  class_mapping.json  classes.txt  compare_model_videos.py  create_kaggle_zip.py  download_models.py  inspect_saved_model.py  kaggle_train_script.py  main_pipeline.py  ppt_content.txt  project_documentation.md  pyproject.toml  render.yaml  requirements.txt  upload_to_huggingface.py
sample videos/: sample1_inferred.json  sample2_inferred.json  sample3_inferred.json  sample4_inferred.json  sample5_inferred.json
src/: config.py  dataset_loader.py  extraction.py  inference.py  mudra_meanings.py  mudra_predictor.py  mudra_processor.py  train_cnn.py  train_mudra_model.py  verify_datasets.py
